8/usql/UsqlPar.fsyacc.output
Output file describing compiled parser placed in UsqlPar.fs and UsqlPar.fsi
------------------------
states = 
state 0:
  items:
    _startMain ->  . Main

  actions:
    action 'EOF' (noprec):   error
    action 'LPAR' (noprec):   error
    action 'RPAR' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'DOT' (noprec):   error
    action 'EQ' (noprec):   error
    action 'NE' (noprec):   error
    action 'GT' (noprec):   error
    action 'LT' (noprec):   error
    action 'GE' (noprec):   error
    action 'LE' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (noprec):   error
    action 'TIMES' (noprec):   error
    action 'DIV' (noprec):   error
    action 'MOD' (noprec):   error
    action 'AND' (noprec):   error
    action 'FROM' (noprec):   error
    action 'NOT' (noprec):   error
    action 'OR' (noprec):   error
    action 'SELECT' (noprec):   shift 4
    action 'WHERE' (noprec):   error
    action 'CSTBOOL' (noprec):   error
    action 'CSTSTRING' (noprec):   error
    action 'NAME' (noprec):   error
    action 'CSTINT' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:
    goto Main: 1
    goto Stmt: 2

state 1:
  items:
    _startMain -> Main . 

  actions:
    action 'EOF' (noprec):   accept
    action 'LPAR' (noprec):   accept
    action 'RPAR' (noprec):   accept
    action 'COMMA' (noprec):   accept
    action 'DOT' (noprec):   accept
    action 'EQ' (noprec):   accept
    action 'NE' (noprec):   accept
    action 'GT' (noprec):   accept
    action 'LT' (noprec):   accept
    action 'GE' (noprec):   accept
    action 'LE' (noprec):   accept
    action 'PLUS' (noprec):   accept
    action 'MINUS' (noprec):   accept
    action 'TIMES' (noprec):   accept
    action 'DIV' (noprec):   accept
    action 'MOD' (noprec):   accept
    action 'AND' (noprec):   accept
    action 'FROM' (noprec):   accept
    action 'NOT' (noprec):   accept
    action 'OR' (noprec):   accept
    action 'SELECT' (noprec):   accept
    action 'WHERE' (noprec):   accept
    action 'CSTBOOL' (noprec):   accept
    action 'CSTSTRING' (noprec):   accept
    action 'NAME' (noprec):   accept
    action 'CSTINT' (noprec):   accept
    action 'error' (noprec):   accept
    action '#' (noprec):   accept
    action '$$' (noprec):   accept

  immediate action:   accept
 gotos:

state 2:
  items:
    Main -> Stmt . 'EOF'

  actions:
    action 'EOF' (noprec):   shift 3
    action 'LPAR' (noprec):   error
    action 'RPAR' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'DOT' (noprec):   error
    action 'EQ' (noprec):   error
    action 'NE' (noprec):   error
    action 'GT' (noprec):   error
    action 'LT' (noprec):   error
    action 'GE' (noprec):   error
    action 'LE' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (noprec):   error
    action 'TIMES' (noprec):   error
    action 'DIV' (noprec):   error
    action 'MOD' (noprec):   error
    action 'AND' (noprec):   error
    action 'FROM' (noprec):   error
    action 'NOT' (noprec):   error
    action 'OR' (noprec):   error
    action 'SELECT' (noprec):   error
    action 'WHERE' (noprec):   error
    action 'CSTBOOL' (noprec):   error
    action 'CSTSTRING' (noprec):   error
    action 'NAME' (noprec):   error
    action 'CSTINT' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:

state 3:
  items:
    Main -> Stmt 'EOF' . 

  actions:
    action 'EOF' (noprec):   reduce Main --> Stmt 'EOF'
    action 'LPAR' (noprec):   reduce Main --> Stmt 'EOF'
    action 'RPAR' (noprec):   reduce Main --> Stmt 'EOF'
    action 'COMMA' (noprec):   reduce Main --> Stmt 'EOF'
    action 'DOT' (noprec):   reduce Main --> Stmt 'EOF'
    action 'EQ' (noprec):   reduce Main --> Stmt 'EOF'
    action 'NE' (noprec):   reduce Main --> Stmt 'EOF'
    action 'GT' (noprec):   reduce Main --> Stmt 'EOF'
    action 'LT' (noprec):   reduce Main --> Stmt 'EOF'
    action 'GE' (noprec):   reduce Main --> Stmt 'EOF'
    action 'LE' (noprec):   reduce Main --> Stmt 'EOF'
    action 'PLUS' (noprec):   reduce Main --> Stmt 'EOF'
    action 'MINUS' (noprec):   reduce Main --> Stmt 'EOF'
    action 'TIMES' (noprec):   reduce Main --> Stmt 'EOF'
    action 'DIV' (noprec):   reduce Main --> Stmt 'EOF'
    action 'MOD' (noprec):   reduce Main --> Stmt 'EOF'
    action 'AND' (noprec):   reduce Main --> Stmt 'EOF'
    action 'FROM' (noprec):   reduce Main --> Stmt 'EOF'
    action 'NOT' (noprec):   reduce Main --> Stmt 'EOF'
    action 'OR' (noprec):   reduce Main --> Stmt 'EOF'
    action 'SELECT' (noprec):   reduce Main --> Stmt 'EOF'
    action 'WHERE' (noprec):   reduce Main --> Stmt 'EOF'
    action 'CSTBOOL' (noprec):   reduce Main --> Stmt 'EOF'
    action 'CSTSTRING' (noprec):   reduce Main --> Stmt 'EOF'
    action 'NAME' (noprec):   reduce Main --> Stmt 'EOF'
    action 'CSTINT' (noprec):   reduce Main --> Stmt 'EOF'
    action 'error' (noprec):   reduce Main --> Stmt 'EOF'
    action '#' (noprec):   reduce Main --> Stmt 'EOF'
    action '$$' (noprec):   reduce Main --> Stmt 'EOF'

  immediate action:   reduce Main --> Stmt 'EOF'
 gotos:

state 4:
  items:
    Stmt -> 'SELECT' . Exprs1 'FROM' Names1

  actions:
    action 'EOF' (noprec):   error
    action 'LPAR' (noprec):   shift 20
    action 'RPAR' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'DOT' (noprec):   error
    action 'EQ' (noprec):   error
    action 'NE' (noprec):   error
    action 'GT' (noprec):   error
    action 'LT' (noprec):   error
    action 'GE' (noprec):   error
    action 'LE' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (explicit left 9997):   shift 56
    action 'TIMES' (explicit left 9998):   shift 14
    action 'DIV' (noprec):   error
    action 'MOD' (noprec):   error
    action 'AND' (noprec):   error
    action 'FROM' (noprec):   error
    action 'NOT' (explicit nonassoc 9999):   shift 23
    action 'OR' (noprec):   error
    action 'SELECT' (noprec):   error
    action 'WHERE' (noprec):   error
    action 'CSTBOOL' (noprec):   shift 58
    action 'CSTSTRING' (noprec):   shift 59
    action 'NAME' (noprec):   shift 11
    action 'CSTINT' (noprec):   shift 55
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:
    goto Column: 15
    goto Expr: 38
    goto Exprs1: 5
    goto Const: 19

state 5:
  items:
    Stmt -> 'SELECT' Exprs1 . 'FROM' Names1

  actions:
    action 'EOF' (noprec):   error
    action 'LPAR' (noprec):   error
    action 'RPAR' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'DOT' (noprec):   error
    action 'EQ' (noprec):   error
    action 'NE' (noprec):   error
    action 'GT' (noprec):   error
    action 'LT' (noprec):   error
    action 'GE' (noprec):   error
    action 'LE' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (noprec):   error
    action 'TIMES' (noprec):   error
    action 'DIV' (noprec):   error
    action 'MOD' (noprec):   error
    action 'AND' (noprec):   error
    action 'FROM' (noprec):   shift 6
    action 'NOT' (noprec):   error
    action 'OR' (noprec):   error
    action 'SELECT' (noprec):   error
    action 'WHERE' (noprec):   error
    action 'CSTBOOL' (noprec):   error
    action 'CSTSTRING' (noprec):   error
    action 'NAME' (noprec):   error
    action 'CSTINT' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:

state 6:
  items:
    Stmt -> 'SELECT' Exprs1 'FROM' . Names1

  actions:
    action 'EOF' (noprec):   error
    action 'LPAR' (noprec):   error
    action 'RPAR' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'DOT' (noprec):   error
    action 'EQ' (noprec):   error
    action 'NE' (noprec):   error
    action 'GT' (noprec):   error
    action 'LT' (noprec):   error
    action 'GE' (noprec):   error
    action 'LE' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (noprec):   error
    action 'TIMES' (noprec):   error
    action 'DIV' (noprec):   error
    action 'MOD' (noprec):   error
    action 'AND' (noprec):   error
    action 'FROM' (noprec):   error
    action 'NOT' (noprec):   error
    action 'OR' (noprec):   error
    action 'SELECT' (noprec):   error
    action 'WHERE' (noprec):   error
    action 'CSTBOOL' (noprec):   error
    action 'CSTSTRING' (noprec):   error
    action 'NAME' (noprec):   shift 8
    action 'CSTINT' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:
    goto Names1: 7

state 7:
  items:
    Stmt -> 'SELECT' Exprs1 'FROM' Names1 . 

  actions:
    action 'EOF' (noprec):   reduce Stmt --> 'SELECT' Exprs1 'FROM' Names1
    action 'LPAR' (noprec):   reduce Stmt --> 'SELECT' Exprs1 'FROM' Names1
    action 'RPAR' (noprec):   reduce Stmt --> 'SELECT' Exprs1 'FROM' Names1
    action 'COMMA' (noprec):   reduce Stmt --> 'SELECT' Exprs1 'FROM' Names1
    action 'DOT' (noprec):   reduce Stmt --> 'SELECT' Exprs1 'FROM' Names1
    action 'EQ' (noprec):   reduce Stmt --> 'SELECT' Exprs1 'FROM' Names1
    action 'NE' (noprec):   reduce Stmt --> 'SELECT' Exprs1 'FROM' Names1
    action 'GT' (noprec):   reduce Stmt --> 'SELECT' Exprs1 'FROM' Names1
    action 'LT' (noprec):   reduce Stmt --> 'SELECT' Exprs1 'FROM' Names1
    action 'GE' (noprec):   reduce Stmt --> 'SELECT' Exprs1 'FROM' Names1
    action 'LE' (noprec):   reduce Stmt --> 'SELECT' Exprs1 'FROM' Names1
    action 'PLUS' (noprec):   reduce Stmt --> 'SELECT' Exprs1 'FROM' Names1
    action 'MINUS' (noprec):   reduce Stmt --> 'SELECT' Exprs1 'FROM' Names1
    action 'TIMES' (noprec):   reduce Stmt --> 'SELECT' Exprs1 'FROM' Names1
    action 'DIV' (noprec):   reduce Stmt --> 'SELECT' Exprs1 'FROM' Names1
    action 'MOD' (noprec):   reduce Stmt --> 'SELECT' Exprs1 'FROM' Names1
    action 'AND' (noprec):   reduce Stmt --> 'SELECT' Exprs1 'FROM' Names1
    action 'FROM' (noprec):   reduce Stmt --> 'SELECT' Exprs1 'FROM' Names1
    action 'NOT' (noprec):   reduce Stmt --> 'SELECT' Exprs1 'FROM' Names1
    action 'OR' (noprec):   reduce Stmt --> 'SELECT' Exprs1 'FROM' Names1
    action 'SELECT' (noprec):   reduce Stmt --> 'SELECT' Exprs1 'FROM' Names1
    action 'WHERE' (noprec):   reduce Stmt --> 'SELECT' Exprs1 'FROM' Names1
    action 'CSTBOOL' (noprec):   reduce Stmt --> 'SELECT' Exprs1 'FROM' Names1
    action 'CSTSTRING' (noprec):   reduce Stmt --> 'SELECT' Exprs1 'FROM' Names1
    action 'NAME' (noprec):   reduce Stmt --> 'SELECT' Exprs1 'FROM' Names1
    action 'CSTINT' (noprec):   reduce Stmt --> 'SELECT' Exprs1 'FROM' Names1
    action 'error' (noprec):   reduce Stmt --> 'SELECT' Exprs1 'FROM' Names1
    action '#' (noprec):   reduce Stmt --> 'SELECT' Exprs1 'FROM' Names1
    action '$$' (noprec):   reduce Stmt --> 'SELECT' Exprs1 'FROM' Names1

  immediate action:   reduce Stmt --> 'SELECT' Exprs1 'FROM' Names1
 gotos:

state 8:
  items:
    Names1 -> 'NAME' . 
    Names1 -> 'NAME' . 'COMMA' Names1

  actions:
    action 'EOF' (noprec):   reduce Names1 --> 'NAME'
    action 'LPAR' (noprec):   reduce Names1 --> 'NAME'
    action 'RPAR' (noprec):   reduce Names1 --> 'NAME'
    action 'COMMA' (noprec):   shift 9
    action 'DOT' (noprec):   reduce Names1 --> 'NAME'
    action 'EQ' (noprec):   reduce Names1 --> 'NAME'
    action 'NE' (noprec):   reduce Names1 --> 'NAME'
    action 'GT' (noprec):   reduce Names1 --> 'NAME'
    action 'LT' (noprec):   reduce Names1 --> 'NAME'
    action 'GE' (noprec):   reduce Names1 --> 'NAME'
    action 'LE' (noprec):   reduce Names1 --> 'NAME'
    action 'PLUS' (noprec):   reduce Names1 --> 'NAME'
    action 'MINUS' (noprec):   reduce Names1 --> 'NAME'
    action 'TIMES' (noprec):   reduce Names1 --> 'NAME'
    action 'DIV' (noprec):   reduce Names1 --> 'NAME'
    action 'MOD' (noprec):   reduce Names1 --> 'NAME'
    action 'AND' (noprec):   reduce Names1 --> 'NAME'
    action 'FROM' (noprec):   reduce Names1 --> 'NAME'
    action 'NOT' (noprec):   reduce Names1 --> 'NAME'
    action 'OR' (noprec):   reduce Names1 --> 'NAME'
    action 'SELECT' (noprec):   reduce Names1 --> 'NAME'
    action 'WHERE' (noprec):   reduce Names1 --> 'NAME'
    action 'CSTBOOL' (noprec):   reduce Names1 --> 'NAME'
    action 'CSTSTRING' (noprec):   reduce Names1 --> 'NAME'
    action 'NAME' (noprec):   reduce Names1 --> 'NAME'
    action 'CSTINT' (noprec):   reduce Names1 --> 'NAME'
    action 'error' (noprec):   reduce Names1 --> 'NAME'
    action '#' (noprec):   reduce Names1 --> 'NAME'
    action '$$' (noprec):   reduce Names1 --> 'NAME'

  immediate action: <none>
 gotos:

state 9:
  items:
    Names1 -> 'NAME' 'COMMA' . Names1

  actions:
    action 'EOF' (noprec):   error
    action 'LPAR' (noprec):   error
    action 'RPAR' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'DOT' (noprec):   error
    action 'EQ' (noprec):   error
    action 'NE' (noprec):   error
    action 'GT' (noprec):   error
    action 'LT' (noprec):   error
    action 'GE' (noprec):   error
    action 'LE' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (noprec):   error
    action 'TIMES' (noprec):   error
    action 'DIV' (noprec):   error
    action 'MOD' (noprec):   error
    action 'AND' (noprec):   error
    action 'FROM' (noprec):   error
    action 'NOT' (noprec):   error
    action 'OR' (noprec):   error
    action 'SELECT' (noprec):   error
    action 'WHERE' (noprec):   error
    action 'CSTBOOL' (noprec):   error
    action 'CSTSTRING' (noprec):   error
    action 'NAME' (noprec):   shift 8
    action 'CSTINT' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:
    goto Names1: 10

state 10:
  items:
    Names1 -> 'NAME' 'COMMA' Names1 . 

  actions:
    action 'EOF' (noprec):   reduce Names1 --> 'NAME' 'COMMA' Names1
    action 'LPAR' (noprec):   reduce Names1 --> 'NAME' 'COMMA' Names1
    action 'RPAR' (noprec):   reduce Names1 --> 'NAME' 'COMMA' Names1
    action 'COMMA' (noprec):   reduce Names1 --> 'NAME' 'COMMA' Names1
    action 'DOT' (noprec):   reduce Names1 --> 'NAME' 'COMMA' Names1
    action 'EQ' (noprec):   reduce Names1 --> 'NAME' 'COMMA' Names1
    action 'NE' (noprec):   reduce Names1 --> 'NAME' 'COMMA' Names1
    action 'GT' (noprec):   reduce Names1 --> 'NAME' 'COMMA' Names1
    action 'LT' (noprec):   reduce Names1 --> 'NAME' 'COMMA' Names1
    action 'GE' (noprec):   reduce Names1 --> 'NAME' 'COMMA' Names1
    action 'LE' (noprec):   reduce Names1 --> 'NAME' 'COMMA' Names1
    action 'PLUS' (noprec):   reduce Names1 --> 'NAME' 'COMMA' Names1
    action 'MINUS' (noprec):   reduce Names1 --> 'NAME' 'COMMA' Names1
    action 'TIMES' (noprec):   reduce Names1 --> 'NAME' 'COMMA' Names1
    action 'DIV' (noprec):   reduce Names1 --> 'NAME' 'COMMA' Names1
    action 'MOD' (noprec):   reduce Names1 --> 'NAME' 'COMMA' Names1
    action 'AND' (noprec):   reduce Names1 --> 'NAME' 'COMMA' Names1
    action 'FROM' (noprec):   reduce Names1 --> 'NAME' 'COMMA' Names1
    action 'NOT' (noprec):   reduce Names1 --> 'NAME' 'COMMA' Names1
    action 'OR' (noprec):   reduce Names1 --> 'NAME' 'COMMA' Names1
    action 'SELECT' (noprec):   reduce Names1 --> 'NAME' 'COMMA' Names1
    action 'WHERE' (noprec):   reduce Names1 --> 'NAME' 'COMMA' Names1
    action 'CSTBOOL' (noprec):   reduce Names1 --> 'NAME' 'COMMA' Names1
    action 'CSTSTRING' (noprec):   reduce Names1 --> 'NAME' 'COMMA' Names1
    action 'NAME' (noprec):   reduce Names1 --> 'NAME' 'COMMA' Names1
    action 'CSTINT' (noprec):   reduce Names1 --> 'NAME' 'COMMA' Names1
    action 'error' (noprec):   reduce Names1 --> 'NAME' 'COMMA' Names1
    action '#' (noprec):   reduce Names1 --> 'NAME' 'COMMA' Names1
    action '$$' (noprec):   reduce Names1 --> 'NAME' 'COMMA' Names1

  immediate action:   reduce Names1 --> 'NAME' 'COMMA' Names1
 gotos:

state 11:
  items:
    Column -> 'NAME' . 
    Column -> 'NAME' . 'DOT' 'NAME'
    Expr -> 'NAME' . 'LPAR' Exprs 'RPAR'

  actions:
    action 'EOF' (noprec):   reduce Column --> 'NAME'
    action 'LPAR' (noprec):   shift 16
    action 'RPAR' (noprec):   reduce Column --> 'NAME'
    action 'COMMA' (noprec):   reduce Column --> 'NAME'
    action 'DOT' (explicit nonassoc 10000):   shift 12
    action 'EQ' (noprec):   reduce Column --> 'NAME'
    action 'NE' (noprec):   reduce Column --> 'NAME'
    action 'GT' (noprec):   reduce Column --> 'NAME'
    action 'LT' (noprec):   reduce Column --> 'NAME'
    action 'GE' (noprec):   reduce Column --> 'NAME'
    action 'LE' (noprec):   reduce Column --> 'NAME'
    action 'PLUS' (noprec):   reduce Column --> 'NAME'
    action 'MINUS' (noprec):   reduce Column --> 'NAME'
    action 'TIMES' (noprec):   reduce Column --> 'NAME'
    action 'DIV' (noprec):   reduce Column --> 'NAME'
    action 'MOD' (noprec):   reduce Column --> 'NAME'
    action 'AND' (noprec):   reduce Column --> 'NAME'
    action 'FROM' (noprec):   reduce Column --> 'NAME'
    action 'NOT' (noprec):   reduce Column --> 'NAME'
    action 'OR' (noprec):   reduce Column --> 'NAME'
    action 'SELECT' (noprec):   reduce Column --> 'NAME'
    action 'WHERE' (noprec):   reduce Column --> 'NAME'
    action 'CSTBOOL' (noprec):   reduce Column --> 'NAME'
    action 'CSTSTRING' (noprec):   reduce Column --> 'NAME'
    action 'NAME' (noprec):   reduce Column --> 'NAME'
    action 'CSTINT' (noprec):   reduce Column --> 'NAME'
    action 'error' (noprec):   reduce Column --> 'NAME'
    action '#' (noprec):   reduce Column --> 'NAME'
    action '$$' (noprec):   reduce Column --> 'NAME'

  immediate action: <none>
 gotos:

state 12:
  items:
    Column -> 'NAME' 'DOT' . 'NAME'

  actions:
    action 'EOF' (noprec):   error
    action 'LPAR' (noprec):   error
    action 'RPAR' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'DOT' (noprec):   error
    action 'EQ' (noprec):   error
    action 'NE' (noprec):   error
    action 'GT' (noprec):   error
    action 'LT' (noprec):   error
    action 'GE' (noprec):   error
    action 'LE' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (noprec):   error
    action 'TIMES' (noprec):   error
    action 'DIV' (noprec):   error
    action 'MOD' (noprec):   error
    action 'AND' (noprec):   error
    action 'FROM' (noprec):   error
    action 'NOT' (noprec):   error
    action 'OR' (noprec):   error
    action 'SELECT' (noprec):   error
    action 'WHERE' (noprec):   error
    action 'CSTBOOL' (noprec):   error
    action 'CSTSTRING' (noprec):   error
    action 'NAME' (noprec):   shift 13
    action 'CSTINT' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:

state 13:
  items:
    Column -> 'NAME' 'DOT' 'NAME' . 

  actions:
    action 'EOF' (noprec):   reduce Column --> 'NAME' 'DOT' 'NAME'
    action 'LPAR' (noprec):   reduce Column --> 'NAME' 'DOT' 'NAME'
    action 'RPAR' (noprec):   reduce Column --> 'NAME' 'DOT' 'NAME'
    action 'COMMA' (noprec):   reduce Column --> 'NAME' 'DOT' 'NAME'
    action 'DOT' (noprec):   reduce Column --> 'NAME' 'DOT' 'NAME'
    action 'EQ' (noprec):   reduce Column --> 'NAME' 'DOT' 'NAME'
    action 'NE' (noprec):   reduce Column --> 'NAME' 'DOT' 'NAME'
    action 'GT' (noprec):   reduce Column --> 'NAME' 'DOT' 'NAME'
    action 'LT' (noprec):   reduce Column --> 'NAME' 'DOT' 'NAME'
    action 'GE' (noprec):   reduce Column --> 'NAME' 'DOT' 'NAME'
    action 'LE' (noprec):   reduce Column --> 'NAME' 'DOT' 'NAME'
    action 'PLUS' (noprec):   reduce Column --> 'NAME' 'DOT' 'NAME'
    action 'MINUS' (noprec):   reduce Column --> 'NAME' 'DOT' 'NAME'
    action 'TIMES' (noprec):   reduce Column --> 'NAME' 'DOT' 'NAME'
    action 'DIV' (noprec):   reduce Column --> 'NAME' 'DOT' 'NAME'
    action 'MOD' (noprec):   reduce Column --> 'NAME' 'DOT' 'NAME'
    action 'AND' (noprec):   reduce Column --> 'NAME' 'DOT' 'NAME'
    action 'FROM' (noprec):   reduce Column --> 'NAME' 'DOT' 'NAME'
    action 'NOT' (noprec):   reduce Column --> 'NAME' 'DOT' 'NAME'
    action 'OR' (noprec):   reduce Column --> 'NAME' 'DOT' 'NAME'
    action 'SELECT' (noprec):   reduce Column --> 'NAME' 'DOT' 'NAME'
    action 'WHERE' (noprec):   reduce Column --> 'NAME' 'DOT' 'NAME'
    action 'CSTBOOL' (noprec):   reduce Column --> 'NAME' 'DOT' 'NAME'
    action 'CSTSTRING' (noprec):   reduce Column --> 'NAME' 'DOT' 'NAME'
    action 'NAME' (noprec):   reduce Column --> 'NAME' 'DOT' 'NAME'
    action 'CSTINT' (noprec):   reduce Column --> 'NAME' 'DOT' 'NAME'
    action 'error' (noprec):   reduce Column --> 'NAME' 'DOT' 'NAME'
    action '#' (noprec):   reduce Column --> 'NAME' 'DOT' 'NAME'
    action '$$' (noprec):   reduce Column --> 'NAME' 'DOT' 'NAME'

  immediate action:   reduce Column --> 'NAME' 'DOT' 'NAME'
 gotos:

state 14:
  items:
    Expr -> 'TIMES' . 

  actions:
    action 'EOF' (explicit left 9998):   reduce Expr --> 'TIMES'
    action 'LPAR' (explicit left 9998):   reduce Expr --> 'TIMES'
    action 'RPAR' (explicit left 9998):   reduce Expr --> 'TIMES'
    action 'COMMA' (explicit left 9998):   reduce Expr --> 'TIMES'
    action 'DOT' (explicit left 9998):   reduce Expr --> 'TIMES'
    action 'EQ' (explicit left 9998):   reduce Expr --> 'TIMES'
    action 'NE' (explicit left 9998):   reduce Expr --> 'TIMES'
    action 'GT' (explicit left 9998):   reduce Expr --> 'TIMES'
    action 'LT' (explicit left 9998):   reduce Expr --> 'TIMES'
    action 'GE' (explicit left 9998):   reduce Expr --> 'TIMES'
    action 'LE' (explicit left 9998):   reduce Expr --> 'TIMES'
    action 'PLUS' (explicit left 9998):   reduce Expr --> 'TIMES'
    action 'MINUS' (explicit left 9998):   reduce Expr --> 'TIMES'
    action 'TIMES' (explicit left 9998):   reduce Expr --> 'TIMES'
    action 'DIV' (explicit left 9998):   reduce Expr --> 'TIMES'
    action 'MOD' (explicit left 9998):   reduce Expr --> 'TIMES'
    action 'AND' (explicit left 9998):   reduce Expr --> 'TIMES'
    action 'FROM' (explicit left 9998):   reduce Expr --> 'TIMES'
    action 'NOT' (explicit left 9998):   reduce Expr --> 'TIMES'
    action 'OR' (explicit left 9998):   reduce Expr --> 'TIMES'
    action 'SELECT' (explicit left 9998):   reduce Expr --> 'TIMES'
    action 'WHERE' (explicit left 9998):   reduce Expr --> 'TIMES'
    action 'CSTBOOL' (explicit left 9998):   reduce Expr --> 'TIMES'
    action 'CSTSTRING' (explicit left 9998):   reduce Expr --> 'TIMES'
    action 'NAME' (explicit left 9998):   reduce Expr --> 'TIMES'
    action 'CSTINT' (explicit left 9998):   reduce Expr --> 'TIMES'
    action 'error' (explicit left 9998):   reduce Expr --> 'TIMES'
    action '#' (explicit left 9998):   reduce Expr --> 'TIMES'
    action '$$' (explicit left 9998):   reduce Expr --> 'TIMES'

  immediate action:   reduce Expr --> 'TIMES'
 gotos:

state 15:
  items:
    Expr -> Column . 

  actions:
    action 'EOF' (noprec):   reduce Expr --> Column
    action 'LPAR' (noprec):   reduce Expr --> Column
    action 'RPAR' (noprec):   reduce Expr --> Column
    action 'COMMA' (noprec):   reduce Expr --> Column
    action 'DOT' (noprec):   reduce Expr --> Column
    action 'EQ' (noprec):   reduce Expr --> Column
    action 'NE' (noprec):   reduce Expr --> Column
    action 'GT' (noprec):   reduce Expr --> Column
    action 'LT' (noprec):   reduce Expr --> Column
    action 'GE' (noprec):   reduce Expr --> Column
    action 'LE' (noprec):   reduce Expr --> Column
    action 'PLUS' (noprec):   reduce Expr --> Column
    action 'MINUS' (noprec):   reduce Expr --> Column
    action 'TIMES' (noprec):   reduce Expr --> Column
    action 'DIV' (noprec):   reduce Expr --> Column
    action 'MOD' (noprec):   reduce Expr --> Column
    action 'AND' (noprec):   reduce Expr --> Column
    action 'FROM' (noprec):   reduce Expr --> Column
    action 'NOT' (noprec):   reduce Expr --> Column
    action 'OR' (noprec):   reduce Expr --> Column
    action 'SELECT' (noprec):   reduce Expr --> Column
    action 'WHERE' (noprec):   reduce Expr --> Column
    action 'CSTBOOL' (noprec):   reduce Expr --> Column
    action 'CSTSTRING' (noprec):   reduce Expr --> Column
    action 'NAME' (noprec):   reduce Expr --> Column
    action 'CSTINT' (noprec):   reduce Expr --> Column
    action 'error' (noprec):   reduce Expr --> Column
    action '#' (noprec):   reduce Expr --> Column
    action '$$' (noprec):   reduce Expr --> Column

  immediate action:   reduce Expr --> Column
 gotos:

state 16:
  items:
    Expr -> 'NAME' 'LPAR' . Exprs 'RPAR'

  actions:
    action 'EOF' (noprec):   reduce Exprs --> 
    action 'LPAR' (noprec):   shift 20
    action 'RPAR' (noprec):   reduce Exprs --> 
    action 'COMMA' (noprec):   reduce Exprs --> 
    action 'DOT' (noprec):   reduce Exprs --> 
    action 'EQ' (noprec):   reduce Exprs --> 
    action 'NE' (noprec):   reduce Exprs --> 
    action 'GT' (noprec):   reduce Exprs --> 
    action 'LT' (noprec):   reduce Exprs --> 
    action 'GE' (noprec):   reduce Exprs --> 
    action 'LE' (noprec):   reduce Exprs --> 
    action 'PLUS' (noprec):   reduce Exprs --> 
    action 'MINUS' (explicit left 9997):   shift 56
    action 'TIMES' (explicit left 9998):   shift 14
    action 'DIV' (noprec):   reduce Exprs --> 
    action 'MOD' (noprec):   reduce Exprs --> 
    action 'AND' (noprec):   reduce Exprs --> 
    action 'FROM' (noprec):   reduce Exprs --> 
    action 'NOT' (explicit nonassoc 9999):   shift 23
    action 'OR' (noprec):   reduce Exprs --> 
    action 'SELECT' (noprec):   reduce Exprs --> 
    action 'WHERE' (noprec):   reduce Exprs --> 
    action 'CSTBOOL' (noprec):   shift 58
    action 'CSTSTRING' (noprec):   shift 59
    action 'NAME' (noprec):   shift 11
    action 'CSTINT' (noprec):   shift 55
    action 'error' (noprec):   reduce Exprs --> 
    action '#' (noprec):   reduce Exprs --> 
    action '$$' (noprec):   reduce Exprs --> 

  immediate action: <none>
 gotos:
    goto Column: 15
    goto Expr: 38
    goto Exprs: 17
    goto Exprs1: 52
    goto Const: 19

state 17:
  items:
    Expr -> 'NAME' 'LPAR' Exprs . 'RPAR'

  actions:
    action 'EOF' (noprec):   error
    action 'LPAR' (noprec):   error
    action 'RPAR' (noprec):   shift 18
    action 'COMMA' (noprec):   error
    action 'DOT' (noprec):   error
    action 'EQ' (noprec):   error
    action 'NE' (noprec):   error
    action 'GT' (noprec):   error
    action 'LT' (noprec):   error
    action 'GE' (noprec):   error
    action 'LE' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (noprec):   error
    action 'TIMES' (noprec):   error
    action 'DIV' (noprec):   error
    action 'MOD' (noprec):   error
    action 'AND' (noprec):   error
    action 'FROM' (noprec):   error
    action 'NOT' (noprec):   error
    action 'OR' (noprec):   error
    action 'SELECT' (noprec):   error
    action 'WHERE' (noprec):   error
    action 'CSTBOOL' (noprec):   error
    action 'CSTSTRING' (noprec):   error
    action 'NAME' (noprec):   error
    action 'CSTINT' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:
